crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__parse_fstring_not_nested_spec.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: suite
---
[
    Expr(
        StmtExpr {
            range: 0..13,
            value: FString(
                ExprFString {
                    range: 0..13,
                    value: FStringValue {
                        inner: SinglePart(
                            FString(
                                FString {
                                    range: 0..13,
                                    elements: [
                                        Expression(
                                            FStringExpressionElement {
                                                range: 2..12,
                                                expression: Name(
                                                    ExprName {
                                                        range: 3..6,
                                                        id: Name("foo"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                debug_text: None,
                                                conversion: None,
                                                format_spec: Some(
                                                    FStringFormatSpec {
                                                        range: 7..11,
                                                        elements: [
                                                            Literal(
                                                                FStringLiteralElement {
                                                                    range: 7..11,
                                                                    value: "spec",
                                                                },
                                                            ),
                                                        ],
                                                    },
                                                ),
                                            },
                                        ),
                                    ],
                                    flags: FStringFlags {
                                        quote_style: Double,
                                        prefix: Regular,
                                        triple_quoted: false,
                                    },
                                },
                            ),
                        ),
                    },
                },
            ),
        },
    ),
]
