crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__parse_string_concat.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: suite
---
[
    Expr(
        StmtExpr {
            range: 0..16,
            value: StringLiteral(
                ExprStringLiteral {
                    range: 0..16,
                    value: StringLiteralValue {
                        inner: MultiPart(
                            ConcatenatedStringLiteral {
                                strings: [
                                    StringLiteral {
                                        range: 0..8,
                                        value: "Hello ",
                                        flags: StringLiteralFlags {
                                            quote_style: Single,
                                            prefix: Empty,
                                            triple_quoted: false,
                                        },
                                    },
                                    StringLiteral {
                                        range: 9..16,
                                        value: "world",
                                        flags: StringLiteralFlags {
                                            quote_style: Single,
                                            prefix: Empty,
                                            triple_quoted: false,
                                        },
                                    },
                                ],
                                value: "Hello world",
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
