crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__parse_string_triple_quotes_with_kind.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: suite
---
[
    Expr(
        StmtExpr {
            range: 0..20,
            value: StringLiteral(
                ExprStringLiteral {
                    range: 0..20,
                    value: StringLiteralValue {
                        inner: SinglePart(
                            StringLiteral {
                                range: 0..20,
                                value: "Hello, world!",
                                flags: StringLiteralFlags {
                                    quote_style: Single,
                                    prefix: Unicode,
                                    triple_quoted: true,
                                },
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
